src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
.listItem {
  box-sizing: border-box;
  height: var(--em-select-list-item-size-height, 2rem);
  max-height: var(--em-select-list-item-size-height, 2rem);
  padding: var(--em-select-list-item-padding-default, 0.5rem);
  border-radius: var(--em-select-list-item-border-radius-default, 0.5rem);
  background: var(--em-select-list-item-background-color-default, #fff);
  color: var(--em-select-list-item-label-color-default, #212129);
  font-style: normal;

  display: flex;
  outline: none;
  cursor: pointer;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  overflow: hidden;
}

.listItem .leftContent {
  display: flex;
  flex: 0 0 auto;
  white-space: nowrap;
  color: var(--em-select-list-item-left-label-color-default, #212129);
}

.listItem .rightContent {
  flex: 1 1 auto;
  min-width: 0;
  color: var(--em-select-list-item-right-label-color-default, #5c5c66);
}

.listItem .leftContent p,
.listItem .rightContent p {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.listItem .rightContent p {
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: right;
}

.listItem:hover,
.listItem:focus {
  background: var(--em-select-list-item-background-color-hover, #f7f7f8);
}

.listItem:active {
  background: var(--em-select-list-item-background-color-pressed, #ededf1);
}

.listItem.disabled {
  color: var(--em-select-list-item-label-color-disabled, #b8b8bd);
  pointer-events: none;
  user-select: none;
}

.listItem .leftContent p {
  padding: 0 var(--em-select-list-item-label-padding-default, 0.5rem);
  /* font-family: Inter; */
  font-size: var(--em-select-list-item-left-label-font-size, 0.75rem);
  font-weight: var(--em-select-list-item-left-label-font-weight, 500);
  line-height: var(--em-select-list-item-left-label-font-line-height, 0.875rem);
}

.listItem .rightContent p {
  color: var(--em-select-list-item-right-label-color-default, #5c5c66);
  padding: 0 var(--em-select-list-item-label-padding-default, 0.5rem);
  /* font-family: var(--em-select-list-item-right-label-font-font-family, Inter); */
  font-size: var(--em-select-list-item-right-label-font-size, 0.75rem);
  font-weight: var(--em-select-list-item-right-label-font-weight, 400);
  line-height: var(--em-select-list-item-right-label-font-line-height, 0.875rem);
}

.listItem.selected {
  background: var(--em-select-list-item-background-color-selected, #212129);
  color: var(--em-select-list-item-left-label-color-selected, #fff);
  span {
    color: var(--em-select-list-item-left-label-color-selected, #fff);
  }
}

.listItem.selected .leftContent p,
.listItem.selected .rightContent p {
  color: inherit;
}

.listItem svg,
.listItem img {
  width: var(--em-select-list-item-icon-size-width, 1rem);
  height: var(--em-select-list-item-icon-size-height, 1rem);
  color: inherit;
}

